<resources>
    <string name="app_name">News Feed</string>
    <string name="news_title">News Title</string>
    <string name="news_detail">News Detail</string>
    <string name="published_on_the">Published on </string>
    <string name="date">date</string>
    <string name="at">At:</string>
    <string name="json_text_here">Json Text Here</string>
    <string name="json_error">Json parsing error from: </string>
    <string name="published_by">Published by </string>
    <string name="author_name">Author Name</string>
</resources>